--- a/predict.ipynb
+++ b/predict.ipynb
@@ -103,374 +103,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2c166302-9ec5-4608-bd6d-83ee76f002db",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fg</th>\n",
-       "      <th>fga</th>\n",
-       "      <th>fg%</th>\n",
-       "      <th>3p</th>\n",
-       "      <th>3pa</th>\n",
-       "      <th>3p%</th>\n",
-       "      <th>ft</th>\n",
-       "      <th>fta</th>\n",
-       "      <th>ft%</th>\n",
-       "      <th>orb</th>\n",
-       "      <th>...</th>\n",
-       "      <th>usg%_max_opp</th>\n",
-       "      <th>ortg_max_opp</th>\n",
-       "      <th>drtg_max_opp</th>\n",
-       "      <th>team_opp</th>\n",
-       "      <th>total_opp</th>\n",
-       "      <th>home_opp</th>\n",
-       "      <th>season</th>\n",
-       "      <th>date</th>\n",
-       "      <th>won</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>37.0</td>\n",
-       "      <td>87.0</td>\n",
-       "      <td>0.425</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>0.368</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>0.696</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>138.0</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>CLE</td>\n",
-       "      <td>95</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2015-10-27</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>42.0</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>0.538</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>0.500</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>0.850</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>29.7</td>\n",
-       "      <td>123.0</td>\n",
-       "      <td>124.0</td>\n",
-       "      <td>BRK</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2015-10-28</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>34.0</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>0.405</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>0.318</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0.731</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>33.7</td>\n",
-       "      <td>133.0</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>DET</td>\n",
-       "      <td>98</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2015-10-30</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>33.0</td>\n",
-       "      <td>87.0</td>\n",
-       "      <td>0.379</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>0.250</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>0.864</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>34.7</td>\n",
-       "      <td>132.0</td>\n",
-       "      <td>109.0</td>\n",
-       "      <td>ORL</td>\n",
-       "      <td>87</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2015-11-01</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>44.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>0.489</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.467</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.375</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>41.3</td>\n",
-       "      <td>176.0</td>\n",
-       "      <td>113.0</td>\n",
-       "      <td>CHO</td>\n",
-       "      <td>130</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2015-11-03</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24289</th>\n",
-       "      <td>36.0</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>0.444</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>0.276</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0.846</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>157.0</td>\n",
-       "      <td>108.0</td>\n",
-       "      <td>POR</td>\n",
-       "      <td>113</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025</td>\n",
-       "      <td>2025-01-19</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24307</th>\n",
-       "      <td>38.0</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>0.404</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>0.326</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0.808</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>31.8</td>\n",
-       "      <td>211.0</td>\n",
-       "      <td>128.0</td>\n",
-       "      <td>LAC</td>\n",
-       "      <td>99</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025</td>\n",
-       "      <td>2025-01-20</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24354</th>\n",
-       "      <td>34.0</td>\n",
-       "      <td>87.0</td>\n",
-       "      <td>0.391</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>0.400</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>0.815</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>28.5</td>\n",
-       "      <td>239.0</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>GSW</td>\n",
-       "      <td>131</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025</td>\n",
-       "      <td>2025-01-23</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24387</th>\n",
-       "      <td>36.0</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>0.424</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>0.316</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>0.650</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>28.5</td>\n",
-       "      <td>162.0</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>PHI</td>\n",
-       "      <td>109</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2025</td>\n",
-       "      <td>2025-01-25</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24408</th>\n",
-       "      <td>49.0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>0.500</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>0.453</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.875</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>26.1</td>\n",
-       "      <td>149.0</td>\n",
-       "      <td>132.0</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>121</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2025</td>\n",
-       "      <td>2025-01-27</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>773 rows × 145 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         fg   fga    fg%    3p   3pa    3p%    ft   fta    ft%   orb  ...  \\\n",
-       "3      37.0  87.0  0.425   7.0  19.0  0.368  16.0  23.0  0.696   7.0  ...   \n",
-       "23     42.0  78.0  0.538  14.0  28.0  0.500  17.0  20.0  0.850   5.0  ...   \n",
-       "61     34.0  84.0  0.405   7.0  22.0  0.318  19.0  26.0  0.731   8.0  ...   \n",
-       "85     33.0  87.0  0.379   7.0  28.0  0.250  19.0  22.0  0.864  11.0  ...   \n",
-       "111    44.0  90.0  0.489  14.0  30.0  0.467   3.0   8.0  0.375   4.0  ...   \n",
-       "...     ...   ...    ...   ...   ...    ...   ...   ...    ...   ...  ...   \n",
-       "24289  36.0  81.0  0.444   8.0  29.0  0.276  22.0  26.0  0.846   8.0  ...   \n",
-       "24307  38.0  94.0  0.404  15.0  46.0  0.326  21.0  26.0  0.808  17.0  ...   \n",
-       "24354  34.0  87.0  0.391  16.0  40.0  0.400  22.0  27.0  0.815  10.0  ...   \n",
-       "24387  36.0  85.0  0.424  12.0  38.0  0.316  13.0  20.0  0.650  13.0  ...   \n",
-       "24408  49.0  98.0  0.500  24.0  53.0  0.453   7.0   8.0  0.875  13.0  ...   \n",
-       "\n",
-       "       usg%_max_opp  ortg_max_opp  drtg_max_opp  team_opp  total_opp  \\\n",
-       "3              29.0         138.0         105.0       CLE         95   \n",
-       "23             29.7         123.0         124.0       BRK        100   \n",
-       "61             33.7         133.0          95.0       DET         98   \n",
-       "85             34.7         132.0         109.0       ORL         87   \n",
-       "111            41.3         176.0         113.0       CHO        130   \n",
-       "...             ...           ...           ...       ...        ...   \n",
-       "24289          29.0         157.0         108.0       POR        113   \n",
-       "24307          31.8         211.0         128.0       LAC         99   \n",
-       "24354          28.5         239.0         116.0       GSW        131   \n",
-       "24387          28.5         162.0         105.0       PHI        109   \n",
-       "24408          26.1         149.0         132.0       DEN        121   \n",
-       "\n",
-       "       home_opp  season        date    won  target  \n",
-       "3             0    2016  2015-10-27   True    True  \n",
-       "23            1    2016  2015-10-28   True   False  \n",
-       "61            1    2016  2015-10-30  False    True  \n",
-       "85            0    2016  2015-11-01   True   False  \n",
-       "111           1    2016  2015-11-03  False    True  \n",
-       "...         ...     ...         ...    ...     ...  \n",
-       "24289         1    2025  2025-01-19  False    True  \n",
-       "24307         1    2025  2025-01-20   True   False  \n",
-       "24354         1    2025  2025-01-23  False   False  \n",
-       "24387         0    2025  2025-01-25  False    True  \n",
-       "24408         0    2025  2025-01-27   True     NaN  \n",
-       "\n",
-       "[773 rows x 145 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df[df[\"team\"] == \"CHI\"]"
+    "df[df[\"team\"] == \"CHI\"] #Testing"
    ]
   },
   {
