--- a/get_data.ipynb
+++ b/get_data.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "d32a8d56-beba-44cc-8f64-2e04557bbdf6",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "57183d2e-a16e-4000-a448-00fdb854b237",
    "metadata": {},
    "outputs": [
@@ -177,32 +177,27 @@
      "output_type": "stream",
      "text": [
       "2024-25 NBA Schedule | Basketball-Reference.com\n",
-      "Saving data/standings/NBA_2025_games-october.html...\n",
-      "2024-25 NBA Schedule | Basketball-Reference.com\n",
-      "Saving data/standings/NBA_2025_games-november.html...\n",
-      "2024-25 NBA Schedule | Basketball-Reference.com\n",
-      "Saving data/standings/NBA_2025_games-december.html...\n",
-      "2024-25 NBA Schedule | Basketball-Reference.com\n",
+      "Skipping data/standings/NBA_2025_games-october.html since it is already saved. If you intended to overwrite, delete file and run again!\n",
+      "Skipping data/standings/NBA_2025_games-november.html since it is already saved. If you intended to overwrite, delete file and run again!\n",
+      "Skipping data/standings/NBA_2025_games-december.html since it is already saved. If you intended to overwrite, delete file and run again!\n",
       "Saving data/standings/NBA_2025_games-january.html...\n",
       "2024-25 NBA Schedule | Basketball-Reference.com\n",
       "Saving data/standings/NBA_2025_games-february.html...\n",
       "2024-25 NBA Schedule | Basketball-Reference.com\n",
-      "Saving data/standings/NBA_2025_games-march.html...\n",
-      "2024-25 NBA Schedule | Basketball-Reference.com\n",
-      "Saving data/standings/NBA_2025_games-april.html...\n",
-      "2024-25 NBA Schedule | Basketball-Reference.com\n"
+      "Skipping data/standings/NBA_2025_games-march.html since it is already saved. If you intended to overwrite, delete file and run again!\n",
+      "Skipping data/standings/NBA_2025_games-april.html since it is already saved. If you intended to overwrite, delete file and run again!\n"
      ]
     }
    ],
    "source": [
     "#Scrape just a single season (2025 is updated as of 1/29/24, 2024 and below doesn't need to be updated)\n",
     "#NOTE: If you want to update the 2025 pages so they're more current, need to delete old 2025_games-month files b/c skips it\n",
-    "#await scrape_season(2025)"
+    "await scrape_season(2025)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "52cba937-8a7b-4956-afba-7bc8ca009cb7",
    "metadata": {},
    "outputs": [
@@ -298,7 +293,7 @@
        " 'NBA_2025_games-october.html']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "2213365e-fbfb-4e80-9e09-84c4fdf443f5",
    "metadata": {},
    "outputs": [],
@@ -351,13 +346,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6f82ecf1-bb9f-4a39-afb6-b75992a35f47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Every game in NBA_2016_games-april.html has already been saved.\n",
+      "Every game in NBA_2016_games-december.html has already been saved.\n",
+      "Every game in NBA_2016_games-february.html has already been saved.\n",
+      "Every game in NBA_2016_games-january.html has already been saved.\n",
+      "Every game in NBA_2016_games-june.html has already been saved.\n",
+      "Every game in NBA_2016_games-march.html has already been saved.\n",
+      "Every game in NBA_2016_games-may.html has already been saved.\n",
+      "Every game in NBA_2016_games-november.html has already been saved.\n",
+      "Every game in NBA_2016_games-october.html has already been saved.\n",
+      "Every game in NBA_2017_games-april.html has already been saved.\n",
+      "Every game in NBA_2017_games-december.html has already been saved.\n",
+      "Every game in NBA_2017_games-february.html has already been saved.\n",
+      "Every game in NBA_2017_games-january.html has already been saved.\n",
+      "Every game in NBA_2017_games-june.html has already been saved.\n",
+      "Every game in NBA_2017_games-march.html has already been saved.\n",
+      "Every game in NBA_2017_games-may.html has already been saved.\n",
+      "Every game in NBA_2017_games-november.html has already been saved.\n",
+      "Every game in NBA_2017_games-october.html has already been saved.\n",
+      "Every game in NBA_2018_games-april.html has already been saved.\n",
+      "Every game in NBA_2018_games-december.html has already been saved.\n",
+      "Every game in NBA_2018_games-february.html has already been saved.\n",
+      "Every game in NBA_2018_games-january.html has already been saved.\n",
+      "Every game in NBA_2018_games-june.html has already been saved.\n",
+      "Every game in NBA_2018_games-march.html has already been saved.\n",
+      "Every game in NBA_2018_games-may.html has already been saved.\n",
+      "Every game in NBA_2018_games-november.html has already been saved.\n",
+      "Every game in NBA_2018_games-october.html has already been saved.\n",
+      "Every game in NBA_2019_games-april.html has already been saved.\n",
+      "Every game in NBA_2019_games-december.html has already been saved.\n",
+      "Every game in NBA_2019_games-february.html has already been saved.\n",
+      "Every game in NBA_2019_games-january.html has already been saved.\n",
+      "Every game in NBA_2019_games-june.html has already been saved.\n",
+      "Every game in NBA_2019_games-march.html has already been saved.\n",
+      "Every game in NBA_2019_games-may.html has already been saved.\n",
+      "Every game in NBA_2019_games-november.html has already been saved.\n",
+      "Every game in NBA_2019_games-october.html has already been saved.\n",
+      "Every game in NBA_2020_games-august.html has already been saved.\n",
+      "Every game in NBA_2020_games-december.html has already been saved.\n",
+      "Every game in NBA_2020_games-february.html has already been saved.\n",
+      "Every game in NBA_2020_games-january.html has already been saved.\n",
+      "Every game in NBA_2020_games-july.html has already been saved.\n",
+      "Every game in NBA_2020_games-march.html has already been saved.\n",
+      "Every game in NBA_2020_games-november.html has already been saved.\n",
+      "Every game in NBA_2020_games-october.html has already been saved.\n",
+      "Every game in NBA_2020_games-september.html has already been saved.\n",
+      "Every game in NBA_2021_games-april.html has already been saved.\n",
+      "Every game in NBA_2021_games-december.html has already been saved.\n",
+      "Every game in NBA_2021_games-february.html has already been saved.\n",
+      "Every game in NBA_2021_games-january.html has already been saved.\n",
+      "Every game in NBA_2021_games-july.html has already been saved.\n",
+      "Every game in NBA_2021_games-june.html has already been saved.\n",
+      "Every game in NBA_2021_games-march.html has already been saved.\n",
+      "Every game in NBA_2021_games-may.html has already been saved.\n",
+      "Every game in NBA_2022_games-april.html has already been saved.\n",
+      "Every game in NBA_2022_games-december.html has already been saved.\n",
+      "Every game in NBA_2022_games-february.html has already been saved.\n",
+      "Every game in NBA_2022_games-january.html has already been saved.\n",
+      "Every game in NBA_2022_games-june.html has already been saved.\n",
+      "Every game in NBA_2022_games-march.html has already been saved.\n",
+      "Every game in NBA_2022_games-may.html has already been saved.\n",
+      "Every game in NBA_2022_games-november.html has already been saved.\n",
+      "Every game in NBA_2022_games-october.html has already been saved.\n",
+      "Every game in NBA_2023_games-april.html has already been saved.\n",
+      "Every game in NBA_2023_games-december.html has already been saved.\n",
+      "Every game in NBA_2023_games-february.html has already been saved.\n",
+      "Every game in NBA_2023_games-january.html has already been saved.\n",
+      "Every game in NBA_2023_games-june.html has already been saved.\n",
+      "Every game in NBA_2023_games-march.html has already been saved.\n",
+      "Every game in NBA_2023_games-may.html has already been saved.\n",
+      "Every game in NBA_2023_games-november.html has already been saved.\n",
+      "Every game in NBA_2023_games-october.html has already been saved.\n",
+      "Every game in NBA_2024_games-april.html has already been saved.\n",
+      "Every game in NBA_2024_games-december.html has already been saved.\n",
+      "Every game in NBA_2024_games-february.html has already been saved.\n",
+      "Every game in NBA_2024_games-january.html has already been saved.\n",
+      "Every game in NBA_2024_games-june.html has already been saved.\n",
+      "Every game in NBA_2024_games-march.html has already been saved.\n",
+      "Every game in NBA_2024_games-may.html has already been saved.\n",
+      "Every game in NBA_2024_games-november.html has already been saved.\n",
+      "Every game in NBA_2024_games-october.html has already been saved.\n",
+      "NBA_2025_games-april.html had no box score links and is likely a future month in season.\n",
+      "Every game in NBA_2025_games-december.html has already been saved.\n",
+      "Hawks vs Pacers, February 1, 2025 | Basketball-Reference.com\n",
+      "Magic vs Jazz, February 1, 2025 | Basketball-Reference.com\n",
+      "Nuggets vs Hornets, February 1, 2025 | Basketball-Reference.com\n",
+      "Nets vs Rockets, February 1, 2025 | Basketball-Reference.com\n",
+      "Wizards vs Timberwolves, February 1, 2025 | Basketball-Reference.com\n",
+      "Kings vs Thunder, February 1, 2025 | Basketball-Reference.com\n",
+      "Lakers vs Knicks, February 1, 2025 | Basketball-Reference.com\n",
+      "Heat vs Spurs, February 1, 2025 | Basketball-Reference.com\n",
+      "Suns vs Trail Blazers, February 1, 2025 | Basketball-Reference.com\n",
+      "Nets vs Hornets, January 29, 2025 | Basketball-Reference.com\n",
+      "Pistons vs Pacers, January 29, 2025 | Basketball-Reference.com\n",
+      "Raptors vs Wizards, January 29, 2025 | Basketball-Reference.com\n",
+      "Bulls vs Celtics, January 29, 2025 | Basketball-Reference.com\n",
+      "Cavaliers vs Heat, January 29, 2025 | Basketball-Reference.com\n",
+      "Nuggets vs Knicks, January 29, 2025 | Basketball-Reference.com\n",
+      "Kings vs 76ers, January 29, 2025 | Basketball-Reference.com\n",
+      "Mavericks vs Pelicans, January 29, 2025 | Basketball-Reference.com\n",
+      "Clippers vs Spurs, January 29, 2025 | Basketball-Reference.com\n",
+      "Timberwolves vs Suns, January 29, 2025 | Basketball-Reference.com\n",
+      "Thunder vs Warriors, January 29, 2025 | Basketball-Reference.com\n",
+      "Hawks vs Cavaliers, January 30, 2025 | Basketball-Reference.com\n",
+      "Lakers vs Wizards, January 30, 2025 | Basketball-Reference.com\n",
+      "Timberwolves vs Jazz, January 30, 2025 | Basketball-Reference.com\n",
+      "Rockets vs Grizzlies, January 30, 2025 | Basketball-Reference.com\n",
+      "Magic vs Trail Blazers, January 30, 2025 | Basketball-Reference.com\n",
+      "Clippers vs Hornets, January 31, 2025 | Basketball-Reference.com\n",
+      "Mavericks vs Pistons, January 31, 2025 | Basketball-Reference.com\n",
+      "Nuggets vs 76ers, January 31, 2025 | Basketball-Reference.com\n",
+      "Bulls vs Raptors, January 31, 2025 | Basketball-Reference.com\n",
+      "Celtics vs Pelicans, January 31, 2025 | Basketball-Reference.com\n",
+      "Bucks vs Spurs, January 31, 2025 | Basketball-Reference.com\n",
+      "Suns vs Warriors, January 31, 2025 | Basketball-Reference.com\n",
+      "NBA_2025_games-march.html had no box score links and is likely a future month in season.\n",
+      "Every game in NBA_2025_games-november.html has already been saved.\n",
+      "Every game in NBA_2025_games-october.html has already been saved.\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "#Run this again to finish parsing, itll skip already saved games because of the \"if os.path.exists\" line above\n",
-    "#UPDATE: Up to date as of 1/29/24, need to re-scrape using \"await scrape_season(2025)\" above to get new box score links for 2025, then run this\n",
+    "#UPDATE: Up to date as of 2/02/25, need to re-scrape using \"await scrape_season(2025)\" above for new box score links 4 2025, then run this\n",
     "for s in standings_files:\n",
     "    standings_file_path = os.path.join(STANDINGS_DIR, s) #s will only have the NBA_year_games-month.html, so give it full path \n",
     "    retCode = await scrape_game(standings_file_path)\n",
