--- a/get_future_games.ipynb
+++ b/get_future_games.ipynb
@@ -11,7 +11,9 @@
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
     "from io import StringIO\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "#NOTE: Only need to run this once, since from there can just load in future_2025.csv, drop all rows before \n",
+    "#      the current date, and then just use that"
    ]
   },
   {
@@ -715,7 +717,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "future_games.to_csv('future_test2.csv', index=False)\n",
+    "future_games.to_csv('future_2025.csv', index=False)\n",
     "#future_games.to_csv(f'data/future_games/future_games_{season_year}.csv')"
    ]
   },
