Updated ReadMe and scraped current data

--- a/get_data.ipynb
+++ b/get_data.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d32a8d56-beba-44cc-8f64-2e04557bbdf6",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "57183d2e-a16e-4000-a448-00fdb854b237",
    "metadata": {},
    "outputs": [
@@ -180,8 +180,7 @@
       "Skipping data/standings/NBA_2025_games-october.html since it is already saved. If you intended to overwrite, delete file and run again!\n",
       "Skipping data/standings/NBA_2025_games-november.html since it is already saved. If you intended to overwrite, delete file and run again!\n",
       "Skipping data/standings/NBA_2025_games-december.html since it is already saved. If you intended to overwrite, delete file and run again!\n",
-      "Saving data/standings/NBA_2025_games-january.html...\n",
-      "2024-25 NBA Schedule | Basketball-Reference.com\n",
+      "Skipping data/standings/NBA_2025_games-january.html since it is already saved. If you intended to overwrite, delete file and run again!\n",
       "Saving data/standings/NBA_2025_games-february.html...\n",
       "2024-25 NBA Schedule | Basketball-Reference.com\n",
       "Skipping data/standings/NBA_2025_games-march.html since it is already saved. If you intended to overwrite, delete file and run again!\n",
@@ -197,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "52cba937-8a7b-4956-afba-7bc8ca009cb7",
    "metadata": {},
    "outputs": [
@@ -293,7 +292,7 @@
        " 'NBA_2025_games-october.html']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "2213365e-fbfb-4e80-9e09-84c4fdf443f5",
    "metadata": {},
    "outputs": [],
@@ -346,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "6f82ecf1-bb9f-4a39-afb6-b75992a35f47",
    "metadata": {},
    "outputs": [
@@ -436,38 +435,77 @@
       "Every game in NBA_2024_games-october.html has already been saved.\n",
       "NBA_2025_games-april.html had no box score links and is likely a future month in season.\n",
       "Every game in NBA_2025_games-december.html has already been saved.\n",
-      "Hawks vs Pacers, February 1, 2025 | Basketball-Reference.com\n",
-      "Magic vs Jazz, February 1, 2025 | Basketball-Reference.com\n",
-      "Nuggets vs Hornets, February 1, 2025 | Basketball-Reference.com\n",
-      "Nets vs Rockets, February 1, 2025 | Basketball-Reference.com\n",
-      "Wizards vs Timberwolves, February 1, 2025 | Basketball-Reference.com\n",
-      "Kings vs Thunder, February 1, 2025 | Basketball-Reference.com\n",
-      "Lakers vs Knicks, February 1, 2025 | Basketball-Reference.com\n",
-      "Heat vs Spurs, February 1, 2025 | Basketball-Reference.com\n",
-      "Suns vs Trail Blazers, February 1, 2025 | Basketball-Reference.com\n",
-      "Nets vs Hornets, January 29, 2025 | Basketball-Reference.com\n",
-      "Pistons vs Pacers, January 29, 2025 | Basketball-Reference.com\n",
-      "Raptors vs Wizards, January 29, 2025 | Basketball-Reference.com\n",
-      "Bulls vs Celtics, January 29, 2025 | Basketball-Reference.com\n",
-      "Cavaliers vs Heat, January 29, 2025 | Basketball-Reference.com\n",
-      "Nuggets vs Knicks, January 29, 2025 | Basketball-Reference.com\n",
-      "Kings vs 76ers, January 29, 2025 | Basketball-Reference.com\n",
-      "Mavericks vs Pelicans, January 29, 2025 | Basketball-Reference.com\n",
-      "Clippers vs Spurs, January 29, 2025 | Basketball-Reference.com\n",
-      "Timberwolves vs Suns, January 29, 2025 | Basketball-Reference.com\n",
-      "Thunder vs Warriors, January 29, 2025 | Basketball-Reference.com\n",
-      "Hawks vs Cavaliers, January 30, 2025 | Basketball-Reference.com\n",
-      "Lakers vs Wizards, January 30, 2025 | Basketball-Reference.com\n",
-      "Timberwolves vs Jazz, January 30, 2025 | Basketball-Reference.com\n",
-      "Rockets vs Grizzlies, January 30, 2025 | Basketball-Reference.com\n",
-      "Magic vs Trail Blazers, January 30, 2025 | Basketball-Reference.com\n",
-      "Clippers vs Hornets, January 31, 2025 | Basketball-Reference.com\n",
-      "Mavericks vs Pistons, January 31, 2025 | Basketball-Reference.com\n",
-      "Nuggets vs 76ers, January 31, 2025 | Basketball-Reference.com\n",
-      "Bulls vs Raptors, January 31, 2025 | Basketball-Reference.com\n",
-      "Celtics vs Pelicans, January 31, 2025 | Basketball-Reference.com\n",
-      "Bucks vs Spurs, January 31, 2025 | Basketball-Reference.com\n",
-      "Suns vs Warriors, January 31, 2025 | Basketball-Reference.com\n",
+      "Bulls vs Pistons, February 2, 2025 | Basketball-Reference.com\n",
+      "Mavericks vs Cavaliers, February 2, 2025 | Basketball-Reference.com\n",
+      "Clippers vs Raptors, February 2, 2025 | Basketball-Reference.com\n",
+      "Celtics vs 76ers, February 2, 2025 | Basketball-Reference.com\n",
+      "Grizzlies vs Bucks, February 2, 2025 | Basketball-Reference.com\n",
+      "Wizards vs Hornets, February 3, 2025 | Basketball-Reference.com\n",
+      "Hawks vs Pistons, February 3, 2025 | Basketball-Reference.com\n",
+      "Rockets vs Knicks, February 3, 2025 | Basketball-Reference.com\n",
+      "Spurs vs Grizzlies, February 3, 2025 | Basketball-Reference.com\n",
+      "Kings vs Timberwolves, February 3, 2025 | Basketball-Reference.com\n",
+      "Bucks vs Thunder, February 3, 2025 | Basketball-Reference.com\n",
+      "Pelicans vs Nuggets, February 3, 2025 | Basketball-Reference.com\n",
+      "Pacers vs Jazz, February 3, 2025 | Basketball-Reference.com\n",
+      "Magic vs Warriors, February 3, 2025 | Basketball-Reference.com\n",
+      "Suns vs Trail Blazers, February 3, 2025 | Basketball-Reference.com\n",
+      "Mavericks vs 76ers, February 4, 2025 | Basketball-Reference.com\n",
+      "Rockets vs Nets, February 4, 2025 | Basketball-Reference.com\n",
+      "Celtics vs Cavaliers, February 4, 2025 | Basketball-Reference.com\n",
+      "Knicks vs Raptors, February 4, 2025 | Basketball-Reference.com\n",
+      "Heat vs Bulls, February 4, 2025 | Basketball-Reference.com\n",
+      "Lakers vs Clippers, February 4, 2025 | Basketball-Reference.com\n",
+      "Pacers vs Trail Blazers, February 4, 2025 | Basketball-Reference.com\n",
+      "Spurs vs Hawks, February 5, 2025 | Basketball-Reference.com\n",
+      "Bucks vs Hornets, February 5, 2025 | Basketball-Reference.com\n",
+      "Cavaliers vs Pistons, February 5, 2025 | Basketball-Reference.com\n",
+      "Wizards vs Nets, February 5, 2025 | Basketball-Reference.com\n",
+      "Heat vs 76ers, February 5, 2025 | Basketball-Reference.com\n",
+      "Grizzlies vs Raptors, February 5, 2025 | Basketball-Reference.com\n",
+      "Bulls vs Timberwolves, February 5, 2025 | Basketball-Reference.com\n",
+      "Pelicans vs Nuggets, February 5, 2025 | Basketball-Reference.com\n",
+      "Warriors vs Jazz, February 5, 2025 | Basketball-Reference.com\n",
+      "Suns vs Thunder, February 5, 2025 | Basketball-Reference.com\n",
+      "Magic vs Kings, February 5, 2025 | Basketball-Reference.com\n",
+      "Mavericks vs Celtics, February 6, 2025 | Basketball-Reference.com\n",
+      "Rockets vs Timberwolves, February 6, 2025 | Basketball-Reference.com\n",
+      "Magic vs Nuggets, February 6, 2025 | Basketball-Reference.com\n",
+      "Warriors vs Lakers, February 6, 2025 | Basketball-Reference.com\n",
+      "Kings vs Trail Blazers, February 6, 2025 | Basketball-Reference.com\n",
+      "Pacers vs Clippers, February 6, 2025 | Basketball-Reference.com\n",
+      "Spurs vs Hornets, February 7, 2025 | Basketball-Reference.com\n",
+      "Cavaliers vs Wizards, February 7, 2025 | Basketball-Reference.com\n",
+      "Bucks vs Hawks, February 7, 2025 | Basketball-Reference.com\n",
+      "Heat vs Nets, February 7, 2025 | Basketball-Reference.com\n",
+      "76ers vs Pistons, February 7, 2025 | Basketball-Reference.com\n",
+      "Raptors vs Thunder, February 7, 2025 | Basketball-Reference.com\n",
+      "Jazz vs Suns, February 7, 2025 | Basketball-Reference.com\n",
+      "Rockets vs Mavericks, February 8, 2025 | Basketball-Reference.com\n",
+      "Pacers vs Lakers, February 8, 2025 | Basketball-Reference.com\n",
+      "Spurs vs Magic, February 8, 2025 | Basketball-Reference.com\n",
+      "Hawks vs Wizards, February 8, 2025 | Basketball-Reference.com\n",
+      "Warriors vs Bulls, February 8, 2025 | Basketball-Reference.com\n",
+      "Thunder vs Grizzlies, February 8, 2025 | Basketball-Reference.com\n",
+      "Trail Blazers vs Timberwolves, February 8, 2025 | Basketball-Reference.com\n",
+      "Celtics vs Knicks, February 8, 2025 | Basketball-Reference.com\n",
+      "Nuggets vs Suns, February 8, 2025 | Basketball-Reference.com\n",
+      "Pelicans vs Kings, February 8, 2025 | Basketball-Reference.com\n",
+      "Jazz vs Clippers, February 8, 2025 | Basketball-Reference.com\n",
+      "Hornets vs Pistons, February 9, 2025 | Basketball-Reference.com\n",
+      "Raptors vs Rockets, February 9, 2025 | Basketball-Reference.com\n",
+      "76ers vs Bucks, February 9, 2025 | Basketball-Reference.com\n",
+      "Timberwolves vs Cavaliers, February 10, 2025 | Basketball-Reference.com\n",
+      "Hawks vs Magic, February 10, 2025 | Basketball-Reference.com\n",
+      "Spurs vs Wizards, February 10, 2025 | Basketball-Reference.com\n",
+      "Hornets vs Nets, February 10, 2025 | Basketball-Reference.com\n",
+      "Celtics vs Heat, February 10, 2025 | Basketball-Reference.com\n",
+      "Warriors vs Bucks, February 10, 2025 | Basketball-Reference.com\n",
+      "Pelicans vs Thunder, February 10, 2025 | Basketball-Reference.com\n",
+      "Kings vs Mavericks, February 10, 2025 | Basketball-Reference.com\n",
+      "Trail Blazers vs Nuggets, February 10, 2025 | Basketball-Reference.com\n",
+      "Jazz vs Lakers, February 10, 2025 | Basketball-Reference.com\n",
+      "Every game in NBA_2025_games-january.html has already been saved.\n",
       "NBA_2025_games-march.html had no box score links and is likely a future month in season.\n",
       "Every game in NBA_2025_games-november.html has already been saved.\n",
       "Every game in NBA_2025_games-october.html has already been saved.\n",
